--- a/fellow-submissions/mark-griffith/style.css
+++ b/fellow-submissions/mark-griffith/style.css
@@ -7,6 +7,10 @@ body {
     background-color: #eee;
     font-family: 'Lato', sans-serif;
 }
+a{
+    text-decoration:none;
+    color:black;
+}
 main{
     display:grid;
     grid-template-rows:1fr auto;
@@ -16,39 +20,7 @@ main{
     ". jumbo jumbo jumbo ."
     ". quality quality quality ."
     ". cards cards cards ."
-    ". footer footer footer .";
-}
-.jumbo{
-    grid-area:jumbo;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 200px;
-    margin-top: 80px;
-}
-.quality{
-    grid-area:quality;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: left;
-}
-.quality .img{
-    display: flex;
-    justify-content: flex-start;
-    height: 37px;
-    width: 37px;
-}
-.cards{
-    grid-area:cards;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+    "footer footer footer footer footer";
 }
 header{
     grid-area:header;
@@ -61,16 +33,19 @@ header{
     background-color: #eee;
     align-items: center;
     width:100%;
+    flex-direction: column;
 }
-li{
-    list-style-type: none;
-}
-nav > ul{
-    display: flex;
+nav ul{
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: center;
 }
 .logo {
     width: 60vw;
     display:flex;
+    align-items: center;
+    justify-content:center;
 }
 .logo > img {
     width: 100%;
@@ -80,7 +55,44 @@ nav > ul{
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-left: 20px;
+}
+.jumbo{
+    grid-area:jumbo;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 200px;
+    margin-top: 150px;
+}
+.quality{
+    grid-area:quality;
+    display: flex;
+    flex-direction: column;
+    margin-bottom:20px;
+}
+.content{
+    margin-bottom:20px;
+}
+ .img{
+    display:none;
+    width:37px;
+    height:37px;
+}
+.cards{
+    grid-area:cards;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+li{
+    list-style-type: none;
+}
+nav > ul{
+    display: flex;
 }
 .product{
     display: flex;
@@ -99,6 +111,9 @@ nav > ul{
     width: 100%;
     text-transform: uppercase;
     font-weight: 700;
+}
+.product ol{
+    margin:15px 0px;
 }
 .jumbo .btn{
     margin:15px 0px;
@@ -152,4 +167,85 @@ footer p{
     justify-content:flex-end;
     margin-top:5px;
     color:#444;
+}
+.vid{
+    grid-area:quality;
+    display:flex;
+    justify-content:center;
+    align-item:center;
+}
+.vid iframe{
+    display:flex;
+    flex-grow:1;
+    max-width:300px;
+    max-height:300px;
+}
+@media only screen and (min-width: 768px){
+    nav ul{
+        display:flex;
+        flex-direction:row;
+    }
+    nav ul li{
+        margin-right:20px;
+    }
+    .jumbo{
+        margin-top:80px;
+    }
+    .top{
+        display:flex;
+        flex-direction:row;
+        justify-content:space-between;
+    }
+    header{
+        display:flex;
+        flex-direction:row;
+        justify-content:space-around;
+    }
+    .logo {
+        width: 100px;
+        display:flex;
+        flex-direction:row;
+        justify-content:flex-start;
+    }
+    .img{
+        display:flex;
+    }
+    figure{
+        display:flex;
+        width:100px;
+        justify-content: center;
+    }
+    figure .img{
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        height: 37px;
+        width: 37px;
+    }
+    .content{
+        display:flex;
+        justify-content:space-around;
+        padding-top:30px;
+        
+    }
+    .desc{
+        display:flex;
+        flex-direction:column;
+        flex-basis:70%;
+        height: 125px;
+        align-content: center;
+    }
+}
+@media only screen and (min-width: 1024px){
+    .cards{
+        display:flex;
+        flex-direction:row;
+    }
+    footer{
+        margin-left:10%;
+        margin-right:10%;
+    }
+    nav ul li{
+        margin-right:80px;
+    }
 }
