--- a/fellow-submissions/Paul-Sobers/style.css
+++ b/fellow-submissions/Paul-Sobers/style.css
@@ -1,24 +1,50 @@
+html{
+  box-sizing:border-box;
+}
+*,*:after, *:before{
+  box-sizing: border-box;
+  }
 
 a{
   text-decoration: none;
 }
+
 nav ul{
   margin:0;
   list-style:none;
-  display:flex;
+  display: flex;
 }
 
-nav{
-  display:flex;
-  justify-content:space-between;
+
+header li a{
+  margin-right:35px 
 }
-nav div{
+
+header div{
   display: flex;
 }
 header{
   background-color: red;
+  display:flex;
+  justify-content:space-around;
 }
 
 h1{
   margin:0;
+}
+
+.top-middle{
+  background-color: blue;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+}
+
+input[id="name"]{
+    width:100%
+}
+
+input[class="btn"]{
+  background-color: black;
+  color:white;
 }
