--- a/fellow-submissions/stephanie-smith/style.css
+++ b/fellow-submissions/stephanie-smith/style.css
@@ -3,6 +3,7 @@
 body {
   background-color: #eeeeee;
   font-family: 'Lato', 'Lucida Grande', 'Lucida Sans Unicode', Tahoma, Sans-Serif;
+  margin-bottom: 0;
 }
 
 h1 {
@@ -198,15 +199,42 @@ p {
 
 .foot h4 {
   margin: 0;
-  padding: 0;
+  padding: 10px;
 }
 
 .foot p {
   margin-left: 33px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 767px) {
   .icon {
     display: none;
+  }
+  
+  .nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    padding: 20px;
+  }
+  
+  .nav p {
+    margin-left: 50px;
+  }
+}
+
+@media screen and (min-width: 802px) {
+  .prices {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 80px;
+  }
+  
+  .priceboxes {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
   }
 }
