--- a/fellow-submissions/devonte-duncan/styles.css
+++ b/fellow-submissions/devonte-duncan/styles.css
@@ -39,7 +39,10 @@ ul{
 
 li{
   margin-bottom: 19px;
-  
+}
+
+label{
+  text-align: center;
 }
 
 li:hover {
@@ -81,14 +84,15 @@ form{
 }
 
 h1{
-  font-size: 50px;
+  font-size: 40px;
   margin-top: 0;
+  text-align: center;
 }
 
 input{
   height: 80px;
   width: 700px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   display: block;
 }
 
@@ -96,8 +100,35 @@ input{
   font-size: 40px;
 }
 
+:placeholder-shown{
+  font-size: 40px;
+}
+
 .email-button{
   height: 75px;
   width: 300px;
+  font-size: 40px;
 }
 
+h3{
+  font-size: 80px;
+  justify-self: center;
+  margin: 0;
+}
+
+p{
+  justify-self: center;
+  text-align: justify;
+}
+
+.statements{
+  display: grid;
+  padding: 45px;
+  margin-bottom: 150px;
+}
+
+article{
+  height: 250px;
+  width: 75%;
+  background-color: yellow;
+}
