--- a/fellow-submissions/devonte-duncan/styles.css
+++ b/fellow-submissions/devonte-duncan/styles.css
@@ -6,15 +6,19 @@ html {
   font-family: sans-serif;
 }
 
+@-ms-viewport{
+  width: device-width;
+}
+
 body{
   margin: 0;
   margin-top: 0;
-  
+  background-color: #eeeeee;
 }
 
 header{
   background-color: #eeeeee;
-  height: 390px;
+  height: 190px;
   width: 100%;
   position: fixed;
   right: 0px;
@@ -24,21 +28,22 @@ header{
 }
 
 .web-title{
-  font-size: 100px;
+  font-size: 40px;
   margin: 0 auto;
+  margin-top: 15px;
 }
 
 ul{
-  margin-bottom: 15px;
+  margin-bottom: 35px;
   list-style: none;
-  font-size: 48px;
+  font-size: 18px;
   padding-left: 0px;
   justify-content: center;
   display: grid;
 }
 
 li{
-  margin-bottom: 19px;
+  margin-bottom: 7px;
 }
 
 label{
@@ -71,9 +76,9 @@ a:active {
 }
 
 body section:first-of-type{
-  margin-top: 390px;
+  margin-top: 190px;
   background-color: #eeeeee;
-  height: 300px;
+  height: 200px;
   display: grid;
   justify-content: center;
 }
@@ -84,51 +89,201 @@ form{
 }
 
 h1{
-  font-size: 40px;
+  font-size: 20px;
   margin-top: 0;
   text-align: center;
 }
 
+h4{
+  text-align: center;
+  font-size: 20px;
+  margin: auto;
+}
+
 input{
-  height: 80px;
-  width: 700px;
+  height: 40px;
+  width: 95%;
   margin-bottom: 20px;
   display: block;
 }
 
 ::placeholder{
-  font-size: 40px;
+  font-size: 20px;
 }
 
 :placeholder-shown{
-  font-size: 40px;
+  font-size: 20px;
 }
 
 .email-button{
-  height: 75px;
-  width: 300px;
-  font-size: 40px;
+  height: 40px;
+  width: 80%;
+  font-size: 20px;
 }
 
 h3{
-  font-size: 80px;
+  font-size: 27px;
   justify-self: center;
   margin: 0;
 }
 
-p{
-  justify-self: center;
-  text-align: justify;
-}
 
 .statements{
   display: grid;
   padding: 45px;
-  margin-bottom: 150px;
+  justify-content: center;
+  text-align: center;
+}
+
+p{
+  text-align: center;
+}
+
+article > h1{
+  font-size: 40px;
+}
+
+.article-title{
+  background-color: #dddddd;
+  height: 70px;
+  padding-top: 25px;
+  margin-bottom: 40px;
 }
 
 article{
-  height: 250px;
-  width: 75%;
-  background-color: yellow;
+  border: 1px solid #000000;
+  width: 80%;
+  height: 350px;
+  margin: 0 auto;
+  margin-bottom: 35px;
+  background-color: #eeeeee;
+  text-align: center;
+}
+
+button{
+  height: 45px;
+  width: 80%;
+  font-size: 20px;
+  background-color: #f1c40f;
+  border-radius: 10px;
+}
+
+article > p{
+ font-size: 20px;
+ margin-bottom: 20px;
+}
+
+figure{
+  margin-bottom: 100px;
+}
+
+footer{
+  padding-top: 15px;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 15px;
+  background-color: #dddddd;
+}
+
+.footer-list{
+    display: flex;
+    justify-content: flex-end;
+    margin: 0;
+}
+
+.footer-list > li{
+  margin: 0;
+  margin-right: 15px;
+}
+
+h6{
+  place-self: flex-end;
+  margin: 0;
+  margin-right: 15px;
+}
+
+.material-icons{
+  display: none;
+}
+
+/* Mobile code ends here*/
+
+@media only screen and (min-width: 768px) {
+  
+  .material-icons{
+    display: unset;
+    height: 70px;
+    width: 70px;
+    font-size: 40px;
+    padding-top: 20px;
+    margin-right: 50px;
+  }
+  
+  .statements{
+    display: flex;
+  }
+  
+  h3{
+    text-align: left;
+   
+  }
+  
+  p{
+    text-align: left;
+    font-size: 20px;
+  }
+  
+  .web-title{
+  font-size: 40px;
+  margin-top: 29px;
+  }
+  
+  h1{
+  font-size: 40px;
+  }
+  
+  iframe{
+    height: 344px;
+  }
+  
+  article{
+    height: 550px;
+    width: 65%;
+  }
+  
+  article > p{
+    margin-bottom: 200px;
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: center;
+  }
+  
+  header{
+    display: flex;
+    justify-content: space-between;
+    height: 120px;
+  }
+  
+  ul{
+    display: flex;
+    align-self: center;
+    font-size: 25px;
+    margin-right: 25px;
+  }
+  
+  li{
+    padding: 10px;
+  }
+  
+  button{
+    height: 55px;
+  }
+  
+}
+
+/* Tablet code ends here*/
+
+@media only screen and (min-width: 1024px) {
+  
+  
 }
