--- a/fellow-submissions/carmen-salas/style.css
+++ b/fellow-submissions/carmen-salas/style.css
@@ -11,13 +11,6 @@ body{
     grid-template-areas:
     "nav-logo"
     "nav"
-    "input-label"
-    "input"
-    "input-button"
-    "about-sec"
-    "video"
-    "box-sec"
-    "footer"
 }
 
 header{
@@ -31,6 +24,8 @@ header{
 .header-sec-1{
     grid-area:nav-logo;
     display:flex;
+    justify-content:center;
+    padding-top:15px;
     
 }
 
@@ -40,45 +35,101 @@ header{
 
 .header-icon{
     color:#006400;
+  
 }
 
 .header-img{
-    height:30px;
+    height:35px;
+
 }
 
-nav, ul{
+.nav-ul{
     list-style:none;
     display:flex;
     flex-direction:column;
     align-items:center;
     padding:0;
+    margin:0;
     
+}
+.nav-ul-li{
+    padding:10px;
 }
 
 .input-sec{
     display:flex;
     flex-direction:column;
     align-items:center;
+    margin-top:190px;
+}
+
+.input-sec, h1{
+    font-size:27px;
+}
+
+form{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 10px;
+}
+
+input{
+    width:200px;
+}
+
+.form-btn{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #f1c40f;
 }
 
 main{
-    margin-top:190px;
     text-align:center;
+}
+
+.main-icons{
+    color:#ff8c00;
+    height: 40px;
+    width: 40px;
+}
+
+.main-headings{
+    font-size:28px;
+    margin:0;
+    padding-top:20px;
+}
+
+.main-p{
+    margin:0;
+}
+
+.video{
+   height:100%;
+   margin:30px 0;
+  
 }
 
 .price-box{
     border:1px solid;
-    margin:0 35px 10px 35px;
+    margin:0 auto 10px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 300px;
 }
 
 
 .price-box-title, h2{
     font-size:18px;
     background-color:#dddddd;
-    padding:6px;
+    width:100%;
 }
 
 .price-ul{
+    display:flex;
+    flex-direction:column;
+    align-content:center;
     font-size:15px;
     padding-bottom:10px;
     margin:0;
@@ -89,6 +140,10 @@ main{
 }
 
 .price-ul, li{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font-size:18px;
     padding:6px 0;
 }
@@ -107,10 +162,93 @@ main{
 }
 
 footer{
-    background-color: #dddddd;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding-bottom:15px;
+    background-color:#dddddd;
+ 
 }
 
-.footer-nav-ul{
-    display:flex;
-    align-content:flex-end;
+.footer-nav-ul, li{
+    display: flex;
+    flex-direction: row;
+    padding-right:10px;
+    margin:0;
+   
+}
+
+.footer-p{
+    margin:0;
+    padding:0 10px ;
+    color:#626262;
+}
+
+@media screen and (max-width: 767px){
+    .main-icons{
+        display: none;
+    }
+}
+
+@media screen and (min-width: 767px){
+    header{
+        display: flex;
+        flex-direction: row;
+        justify-content:space-between;
+        
+    }
+    
+    .header-sec-1{
+        padding-left:15px;
+    }
+    .nav-ul{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        
+    }
+    
+    .input-sec{
+        margin-top:50px;
+        text-align:center;
+        margin-bottom: 60px;
+    }
+    
+    .main-icons{
+        margin:25px 60px 0 80px;
+    }
+    .icon-sec{
+        display:flex;
+        flex-direction:column;
+    }
+    
+    .icon-sec-rows{
+        margin-bottom:30px;
+        display:flex;
+        flex-direction:row;
+        justify-content:space-around;
+    }
+    
+    .icon-text{
+        text-align:left;
+        margin:0 auto;
+    }
+    
+    .price-sec{
+        display:flex;
+        flex-direction:row;
+        justify-content:space-around;
+    }
+    
+    .price-box{
+        margin:1.5%;
+        width:50%;
+        
+    }
+}
+
+@media screen and (min-width: 802px){
+    main{
+        padding:0 10%;
+    }
 }
